--- a/src/resources/kafka.properties
+++ b/src/resources/kafka.properties
@@ -1,5 +1,9 @@
+# Server properties #
 client.id=TxKafkaProducer
 producer.key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
 metadata.broker.list=localhost:9092
 serializer.class=kafka.serializer.StringEncoder
+
+# Producer properties #
+kafka.producer.twitter.topic=twitter100
